kubernetes/test/app-test-deployment-flask.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment-flask
  labels:
    app: test-flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-flask-app
  template:
    metadata:
      labels:
        app: test-flask-app
    spec:
      containers:
        - name: test-app-container
          imagePullPolicy: Always
          image: rguarneros065/flask-worldpop_api:1.0 
          command: ["python", "/app/api.py"]
          env:
            - name: REDIS_HOST
              value: "test-redis-service"
