kubernetes/test/app-test-ingress-flask.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: test-ingress-flask
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: "<username>-flask.coe332.tacc.cloud"
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: test-service-nodeport
              port:
                  number: 5000
