kubernetes/test/app-test-service-flask.yml
---
apiVersion: v1
kind: Service
metadata:
  name: test-flask-service
  labels:
    app: test-flask-app
spec:
  selector:
    app: test-flask-app
  ports:
    - port: 5000       # the port other pods will use to talk to Flask
      targetPort: 5000 # the port your Flask app listens on in the container
  type: ClusterIP
