kubernetes/test/app-test-service-redis.yml
---
apiVersion: v1
kind: Service
metadata:
  name: test-redis-service
  labels:
    app: test-redis-service
spec:
  selector:
    app: test-deployment-redis
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
